application/web/test/src/main/java/com/tekgs/nextgen/duckies/view/error/ErrorViewCalibratable.java
package com.tekgs.nextgen.duckies.view.error;

public interface ErrorViewCalibratable {
    String getGenericErrorMessage();
}
